@@ -35,6 +35,7 @@ public:
       CONVERGED_TO_ACCEPTABLE_POINT,
       MAXITER_EXCEEDED,
       CPUTIME_EXCEEDED,
+      WALLTIME_EXCEEDED,
       DIVERGING,
       USER_STOP,
       FAILED
