@@ -24,6 +24,7 @@ DECLARE_STD_EXCEPTION(RESTORATION_CONVERGED_TO_FEASIBLE_POINT);
 DECLARE_STD_EXCEPTION(RESTORATION_FAILED);
 DECLARE_STD_EXCEPTION(RESTORATION_MAXITER_EXCEEDED);
 DECLARE_STD_EXCEPTION(RESTORATION_CPUTIME_EXCEEDED);
+DECLARE_STD_EXCEPTION(RESTORATION_WALLTIME_EXCEEDED);
 DECLARE_STD_EXCEPTION(RESTORATION_USER_STOP);
 ///@}
 
