@@ -21,6 +21,7 @@ enum SolverReturn
    SUCCESS,
    MAXITER_EXCEEDED,
    CPUTIME_EXCEEDED,
+   WALLTIME_EXCEEDED,
    STOP_AT_TINY_STEP,
    STOP_AT_ACCEPTABLE_POINT,
    LOCAL_INFEASIBILITY,
