@@ -37,6 +37,9 @@ C
       INTEGER IP_CPUTIME_EXCEEDED
       PARAMETER( IP_CPUTIME_EXCEEDED = -4 )
 
+      INTEGER IP_WALLTIME_EXCEEDED
+      PARAMETER( IP_WALLTIME_EXCEEDED = -5 )
+
       INTEGER IP_NOT_ENOUGH_DEGREES_OF_FRE
       PARAMETER( IP_NOT_ENOUGH_DEGREES_OF_FRE = -10 )
 
